Hide build output when running on GitHub Actions

--- a/.github/workflows/build-test-run.yml
+++ b/.github/workflows/build-test-run.yml
@@ -12,4 +12,4 @@ jobs:
       - name: Run tests
         run: cargo test --release
       - name: Run
-        run: "ls -d day_* | xargs -I '{}' cargo run --release --bin '{}'"
+        run: "ls -d day_* | xargs -I '{}' cargo run --release --quiet --bin '{}'"
