--- a/.github/workflows/test-run.yml
+++ b/.github/workflows/test-run.yml
@@ -1,15 +1,17 @@
-name: Build/test/run
+name: Test + run
 
 on: [ push ]
 
 jobs:
-  build-test-run:
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Build
-        run: cargo build --release
-      - name: Run tests
-        run: cargo test --release
+      - name: Test
+        run: cargo test
+  run:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
       - name: Run
         run: "ls -d day_* | xargs -I '{}' cargo run --release --quiet --bin '{}'"
