--- a/.github/workflows/test-run.yml
+++ b/.github/workflows/test-run.yml
@@ -7,11 +7,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Build
+        run: cargo build --tests
       - name: Test
         run: cargo test
   run:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Build
+        run: cargo build --release
       - name: Run
         run: "ls -d day_* | xargs -I '{}' cargo run --release --quiet --bin '{}'"
