--- a/.github/workflows/test-run.yml
+++ b/.github/workflows/test-run.yml
@@ -8,9 +8,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Build
-        run: cargo build --tests
+        run: cargo build --release --tests
       - name: Test
-        run: cargo test
+        run: cargo test --release
   run:
     runs-on: ubuntu-latest
     steps:
